# opencv-cv1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/week_one/: 01_getting_started.cpp  02_basic_image_operations.cpp
week1/lesson1/: CMakeLists.txt  README.md  WORKSPACE  bazel-bin  bazel-lesson1  bazel-out  bazel-testlogs  opencv.BUILD  runProgram.sh
week1/lesson1/main/: BUILD  getting-started.cpp
week1/lesson2/: CMakeLists.txt  README.md  basic-image-operations.cpp
week1/lesson2/main/: basic-image-operations.cpp
week1/lesson3/: CMakeLists.txt  README.md
week1/lesson3/main/: mathematical-operations.cpp
